<resources>
    <string name="app_name">我爱健身</string>

    <string name="introduction">简介</string>
    <string name="video_desc_review">评论</string>
    <string name="week_rank">周排行</string>
    <string name="month_rank">月排行</string>
    <string name="total_rank">总排行</string>
    <string name="load_finish">已经加载完毕</string>

    <string name="uri_test_7">http://mp4.vjshi.com/2016-10-21/84bafe60ef0af95a5292f66b9f692504.mp4</string>
    <string name="uri_test_8">http://mp4.vjshi.com/2017-04-14/933db6540f53dd38974b4446388fb928.mp4</string>
    <string name="uri_test_9">http://mp4.vjshi.com/2015-05-11/1431320221859_786.mp4</string>
    <string name="uri_test_11">http://mp4.vjshi.com/2016-12-22/3ccab5a78036fa933c8585f4a1e57a44.mp4</string>

    <string name="btn_show_video_ad">展示视频广告</string>


    <string name="action_settings">设置</string>

    <string name="btn_show_offerswall">展示积分墙(全屏)</string>

    <string name="btn_show_offerswall_dialog">展示积分墙(对话框)</string>

    <string name="btn_award_points">奖励10积分</string>

    <string name="btn_spend_points">消费20积分</string>

    <string name="btn_get_online_config">获取有米在线参数</string>

    <string name="btn_check_reach_ntp_time">是否达到指定网络时间</string>

    <string name="btn_check_ad_config">检查广告配置</string>
</resources>
